# OpenEye

./: Dockerfile  README.md  pyproject.toml
OpenEye/: DOCUMENTATION.md  README.md
OpenEye/src/UNKNOWN.egg-info/: top_level.txt
OpenEye/src/openvideo/ai/: assistant.py  assistants_integration.py  langchain_integration.py
OpenEye/src/openvideo/camera/: __init__.py  mipi.py  network.py  v4l2.py
OpenEye/src/openvideo/core/: processor.py
OpenEye/src/openvideo/encoding/: __init__.py  decoder.py  encoder.py  h264.py  h265.py  klv.py
OpenEye/src/openvideo/streaming/: webrtc.py
OpenEye/src/openvideo/vision/: detection.py  detector.py  tracking.py
OpenEye/src/ui/qml/: DroneAnalyzer.qml
OpenEye/web/src/components/: WebRTCPlayer.jsx
src-tauri/src/: main.rs
src/openvideo/: __init__.py  main.py
src/openvideo/ai/: query_engine.py
src/openvideo/camera/: file.py  interface.py
src/openvideo/containers/: mpegts.py
src/openvideo/core/: pipeline.py  types.py
src/openvideo/streaming/: rtsp.py
src/openvideo/telemetry/: klv.py
src/openvideo/utils/: logging.json  logging.py
src/ui/qml/: Main.qml
tests/integration/: test_server.py
web/src/: App.jsx
web/src/services/: ApiService.js
